Archive2/4f/10239eb4022ddf/output
main.cpp:6:5: error: call to function 'foo' that is neither visible in the template definition nor found by argument-dependent lookup
    foo(t);
    ^
main.cpp:24:5: note: in instantiation of function template specialization 'bar<int>' requested here
    bar(f);
    ^
main.cpp:17:6: note: 'foo' should be declared prior to the call site
void foo(T)
     ^
1 error generated.
